Minor bug catches

--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,4 @@
 {
-    "default_config": "Unity.json",
-    "file_to_process": "Monster_MDP.jff"
+    "default_config": "C:\\Users\\Michael\\Documents\\GitHub\\JFlapToCode\\Unity.json",
+    "file_to_process": "UnityChanFighter.jff"
 }
