--- a/Config/settings.json
+++ b/Config/settings.json
@@ -1,4 +1,4 @@
 {
-    "default_config": "C:\\Users\\Michael\\Documents\\GitHub\\JFlapToCode\\Config\\Settings\\Android.json",
-    "file_to_process": "UnityChanFighter.jff"
+    "default_config": "C:\\Users\\Rise\\Documents\\GitHub\\JFlapToCode\\Config\\Settings\\Unity.json",
+    "file_to_process": "Monster.jff"
 }
