Made finding subdirectories more robust

--- a/Config/settings.json
+++ b/Config/settings.json
@@ -1,4 +1,4 @@
 {
-    "default_config": "C:\\Users\\Rise\\Documents\\GitHub\\JFlapToCode\\Config\\Settings\\Unity.json",
+    "default_config": "Unity.json",
     "file_to_process": "Monster.jff"
 }
