Refactoring, updated unity code to be more robust

--- a/Config/settings.json
+++ b/Config/settings.json
@@ -3,7 +3,7 @@
     "mode" : "Unity",
     "modes"        : {
     	"Unity" : {
-    		"jinja_template" : "Unity.jinja",
+    		"jinja_template" : "Unity.jinja.cs",
 		"file_ext" : "AbstractHLSM.cs",
 		"mdp_file_ext" : "AbstractMDP.cs"
 	},
