--- a/Config/settings.json
+++ b/Config/settings.json
@@ -1,6 +1,6 @@
 {
     "file_to_process": ["samples", "Monster.jff"],
-    "mode" : "Unity",
+    "mode" : "Arduino",
     "modes"        : {
     	"Unity" : {
             "jinja_template" : "Unity.jinja.cs",
@@ -14,8 +14,13 @@
             "line_statement_prefix" : "%"
         },
     	"Arduino" : {
-    		"jinja_template" : "Arduino.jinja.cpp",
-            "file_ext" : "HLSM.cpp",
+    		"jinja_template" : "Arduino.jinja.h",
+            "file_ext" : "HLSM.h",
+            "line_statement_prefix" : "%"
+        },
+        "Arduino_c" : {
+    		"jinja_template" : "Arduino_c.jinja.h",
+            "file_ext" : "_StateMachine.h",
             "line_statement_prefix" : "%"
         }
     }
