--- a/Config/settings.json
+++ b/Config/settings.json
@@ -1,65 +1,1 @@
-{
-   "file_to_process":[
-      "samples",
-      "Monster.jff"
-   ],
-   "modes":{
-      "Python":{
-         "add_parens_to_trans" : 0,
-         "file_ext":"AbstractHLSM.py",
-         "line_statement_prefix":"%",
-         "jinja_template":"Python.jinja.py"
-      },
-      "CSharp":{
-         "add_parens_to_trans" : 1,
-         "file_ext":"AbstractHLSM.cs",
-         "mdp_file_ext":"AbstractMDP.cs",
-         "line_statement_prefix":"%",
-         "jinja_template":"CSharp.jinja"
-      },
-      "Java":{
-         "add_parens_to_trans" : 1,
-         "file_ext":"AbstractFSM.java",
-         "mdp_file_ext":"AbstractFSM.java",
-         "line_statement_prefix":"%",
-         "jinja_template":"Java_Base.jinja.java"
-      },
-      "Unity":{
-         "add_parens_to_trans" : 1,
-         "file_ext":"AbstractHLSM.cs",
-         "mdp_file_ext":"AbstractMDP.cs",
-         "line_statement_prefix":"%",
-         "jinja_template":"Unity.jinja.cs"
-      },
-      "Arduino":{
-         "add_parens_to_trans" : 1,
-         "file_ext":"HLSM.h",
-         "line_statement_prefix":"%",
-         "jinja_template":"Arduino.jinja.h"
-      },
-      "Arduino_c":{
-         "add_parens_to_trans" : 1,
-         "file_ext":"_StateMachine.h",
-         "line_statement_prefix":"%",
-         "jinja_template":"Arduino_c.jinja.h"
-      },
-      "C":{
-         "add_parens_to_trans" : 1,
-         "file_ext":"_StateMachine.h",
-         "line_statement_prefix":"%",
-         "jinja_template":"c.jinja.h"
-      },
-      "Cpp":{
-         "add_parens_to_trans" : 1,
-         "file_ext":"_StateMachine.h",
-         "line_statement_prefix":"%",
-         "jinja_template":"cpp.jinja.h"
-      },
-      "Dot": {
-         "add_parens_to_trans" : 0,
-         "line_statement_prefix":"%",
-         "file_ext":".dot"
-      }
-   },
-   "mode":"Unity"
-}
+{"mode": "Arduino", "modes": {"C": {"file_ext": "_StateMachine.h", "add_parens_to_trans": 1, "line_statement_prefix": "%", "jinja_template": "c.jinja.h"}, "Java": {"file_ext": "AbstractFSM.java", "add_parens_to_trans": 1, "mdp_file_ext": "AbstractFSM.java", "line_statement_prefix": "%", "jinja_template": "Java_Base.jinja.java"}, "Arduino": {"file_ext": "HLSM.h", "add_parens_to_trans": 1, "line_statement_prefix": "%", "jinja_template": "Arduino.jinja.h"}, "Python": {"file_ext": "AbstractHLSM.py", "add_parens_to_trans": 0, "line_statement_prefix": "%", "jinja_template": "Python.jinja.py"}, "Arduino_c": {"file_ext": "_StateMachine.h", "add_parens_to_trans": 1, "line_statement_prefix": "%", "jinja_template": "Arduino_c.jinja.h"}, "Unity": {"file_ext": "AbstractHLSM.cs", "add_parens_to_trans": 1, "mdp_file_ext": "AbstractMDP.cs", "line_statement_prefix": "%", "jinja_template": "Unity.jinja.cs"}, "CSharp": {"file_ext": "AbstractHLSM.cs", "add_parens_to_trans": 1, "mdp_file_ext": "AbstractMDP.cs", "line_statement_prefix": "%", "jinja_template": "CSharp.jinja"}, "Cpp": {"file_ext": "_StateMachine.h", "add_parens_to_trans": 1, "line_statement_prefix": "%", "jinja_template": "cpp.jinja.h"}, "Dot": {"file_ext": ".dot", "add_parens_to_trans": 0, "line_statement_prefix": "%"}}, "file_to_process": ["samples", "Monster.jff"]}
