--- a/Config/settings.json
+++ b/Config/settings.json
@@ -1,1 +1,81 @@
-{"mode": "Arduino", "modes": {"C": {"file_ext": "_StateMachine.h", "add_parens_to_trans": 1, "line_statement_prefix": "%", "jinja_template": "c.jinja.h"}, "Java": {"file_ext": "AbstractFSM.java", "add_parens_to_trans": 1, "mdp_file_ext": "AbstractFSM.java", "line_statement_prefix": "%", "jinja_template": "Java_Base.jinja.java"}, "Arduino": {"file_ext": "HLSM.h", "add_parens_to_trans": 1, "line_statement_prefix": "%", "jinja_template": "Arduino.jinja.h"}, "Python": {"file_ext": "AbstractHLSM.py", "add_parens_to_trans": 0, "line_statement_prefix": "%", "jinja_template": "Python.jinja.py"}, "Arduino_c": {"file_ext": "_StateMachine.h", "add_parens_to_trans": 1, "line_statement_prefix": "%", "jinja_template": "Arduino_c.jinja.h"}, "Unity": {"file_ext": "AbstractHLSM.cs", "add_parens_to_trans": 1, "mdp_file_ext": "AbstractMDP.cs", "line_statement_prefix": "%", "jinja_template": "Unity.jinja.cs"}, "CSharp": {"file_ext": "AbstractHLSM.cs", "add_parens_to_trans": 1, "mdp_file_ext": "AbstractMDP.cs", "line_statement_prefix": "%", "jinja_template": "CSharp.jinja"}, "Cpp": {"file_ext": "_StateMachine.h", "add_parens_to_trans": 1, "line_statement_prefix": "%", "jinja_template": "cpp.jinja.h"}, "Dot": {"file_ext": ".dot", "add_parens_to_trans": 0, "line_statement_prefix": "%"}}, "file_to_process": ["samples", "Monster.jff"]}
+{
+    "mode": "Arduino_c",
+    "super_class": "AbstractControllerLogic",
+    "namespace": "Mahou.Controls",
+    "modes": {
+        "C": {
+            "file_ext": "_StateMachine.h",
+            "add_parens_to_trans": 1,
+            "line_statement_prefix": "%",
+            "jinja_template": "c.jinja.h"
+        },
+        "Java": {
+            "file_ext": "AbstractFSM.java",
+            "add_parens_to_trans": 1,
+            "mdp_file_ext": "AbstractFSM.java",
+            "line_statement_prefix": "%",
+            "jinja_template": "Java_Base.jinja.java"
+        },
+        "Arduino": {
+            "file_ext": "HLSM.h",
+            "add_parens_to_trans": 1,
+            "line_statement_prefix": "%",
+            "jinja_template": "Arduino.jinja.h"
+        },
+        "Python": {
+            "file_ext": "AbstractHLSM.py",
+            "add_parens_to_trans": 0,
+            "line_statement_prefix": "%",
+            "jinja_template": "Python.jinja.py"
+        },
+        "Arduino_c": {
+            "file_ext": "_StateMachine.h",
+            "add_parens_to_trans": 1,
+            "line_statement_prefix": "%",
+            "jinja_template": "Arduino_c.jinja.h"
+        },
+        "Unity": {
+            "file_ext": "AbstractHLSM.cs",
+            "add_parens_to_trans": 1,
+            "mdp_file_ext": "AbstractMDP.cs",
+            "line_statement_prefix": "%",
+            "jinja_template": "Unity.jinja.cs"
+        },
+        "CSharp": {
+            "file_ext": "AbstractHLSM.cs",
+            "add_parens_to_trans": 1,
+            "mdp_file_ext": "AbstractMDP.cs",
+            "line_statement_prefix": "%",
+            "jinja_template": "CSharp.jinja"
+        },
+        "UnitySimple": {
+            "file_ext": "FSM.cs",
+            "add_parens_to_trans": 1,
+            "mdp_file_ext": "MDP.cs",
+            "line_statement_prefix": "%",
+            "jinja_template": "UnitySimple.jinja.cs"
+        },
+        "UnityCompact": {
+            "file_ext": "FSM.cs",
+            "add_parens_to_trans": 1,
+            "mdp_file_ext": "MDP.cs",
+            "line_statement_prefix": "%",
+            "jinja_template": "UnityUpdate.jinja.cs"
+        },
+        "Cpp": {
+            "file_ext": "_StateMachine.h",
+            "add_parens_to_trans": 1,
+            "line_statement_prefix": "%",
+            "jinja_template": "cpp.jinja.h"
+        },
+        "Dot": {
+            "file_ext": ".dot",
+            "add_parens_to_trans": 0,
+            "line_statement_prefix": "%"
+        }
+    },
+    "file_to_process": [
+        "samples",
+        "Monster.jff"
+    ]
+}
